@@ -9,6 +9,10 @@ Revision history for Hailo
 
     - Word tokenizer: Match tabs as tokens
 
+    - Word tokenizer: Match timestamps as single tokens
+
+    - Word tokenizer: Match IRC nicks (<foobar>, <@foobar>, etc)
+
 0.68 2011-05-03 13:16:05
 
     - Speed up the learning of repetitive sentences by caching more
